# habit-tracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7af222739b49_create_activities_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: activities.py  router.py
backend/app/models/: activities.py
backend/app/schemas/: activity.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx
